# rs-foa

./: Cargo.toml  README.md  Stereotype_File_Sections.txt  gen-doc.sh  psql_as_admin.sh
app1/: Cargo.toml
app1/src/: lib.rs
app1/src/run/: ctx.rs  mod.rs  svc_flows.rs  tokio_run.rs
app1/src/svc/: foo_sfl.rs  init_daf.rs  read_daf.rs  update_daf.rs
app1/tests/: common_test_app1.rs  test_1_2_app1.rs
dev_support/: Cargo.toml
dev_support/examples/: app_error_example.rs  axum_handler_perplexity.rs  axum_headers_perplexity.rs  axum_parts_perplexity.rs  axum_sqlx_perplexity.rs  cda_axum_get_artct.rs  cda_axum_get_artctpg.rs  cda_axum_get_artctpg_hdrs.rs  cda_axum_get_artctps.rs  cda_axum_get_artctps.rsx  cda_axum_get_artctps_hdrs.rs  cda_run_foo_artct_bar_artct_tokio.rs  cda_run_foo_bar_artct_tokio.rs  cda_run_foo_bar_artctpg_tokio.rs  cda_run_foo_bar_artctps_tokio.rs  core_error_example.rs  deser_example.rs  error_fmt_example.rs  foa_error_example.rs  wrapper_discr_example.rs  wrapper_example.rs  xyz_error_example.rs
dev_support/src/: lib.rs
dev_support/src/artct/: bar_artct_bf.rs  context.rs  foo_artct_sfl.rs  make_sfls_artct.rs  mod.rs  tokio_run_artct.rs
dev_support/src/artct/common/: app_cfg_info.rs  foo_bar_utils.rs  foo_data.rs  mod.rs  ref_into.rs  tx.rs
dev_support/src/artcti/: bar_bf.rs  foo_sfl.rs  make_sfls.rs  mod.rs  tokio_run.rs
dev_support/src/artcti/common/: app_cfg_info.rs  app_err.rs  tx.rs
dev_support/src/artctpg/: bar_bf.rs  foo_sfl.rs  init_daf.rs  mod.rs  tokio_run.rs
dev_support/src/artctpg/common/: ctx.rs
dev_support/src/artctpg/run/: ctx.rs  mod.rs  svc_flows.rs  tokio_run.rs
dev_support/src/artctpg/svc/: bar_bf.rs  common.rs  foo_sfl.rs  init_daf.rs  mod.rs  read_daf.rs  update_daf.rs
dev_support/src/artctpg/svc/common/: mod.rs
dev_support/src/artctps/: bar_bf.rs  foo_sfl.rs  init_daf.rs  make_sfls.rs  mod.rs  read_daf.rs  tokio_run.rs  update_daf.rs
dev_support/src/artctps/common/: app_cfg_info.rs  app_err.rs  ctx.rs  mod.rs  tx.rs
dev_support/src/foa_exp/: mod.rs
dev_support/src/foa_exp/db/: mod.rs  sqlx_old.rs
dev_support/src/foa_exp/error/: maybe_error.rs  mod.rs
dev_support/src/foa_exp/fun/: async_rfn.rs
dev_support/src/foa_exp/tokio/: mod.rs  task_local_old.rs
dev_support/src/foa_exp/web/axum/: json_handlers_experiment.rs  json_handlers_old.rs  mod.rs
dev_support/src/foa_old/db/: sqlx_old.rs
dev_support/src/foa_old/fun/: mod.rs
dev_support/src/foa_old/tokio/: task_local_old.rs
dev_support/src/foa_old/web/axum/: json_handlers_experiment.rs  json_handlers_old.rs
dev_support/tests/: common_test_artct.rs  common_test_artctpg.rs  common_test_artctps.rs  test_1_2_artct.rs  test_1_2_artctpg.rs  test_1_2_artctps.rs
examples/: app_error_example.rs  core_error_example.rs  foa_error_example.rs  xyz_error_example.rs
foa/: Cargo.toml
foa/examples/: app_error_example.rs  core_error_example.rs
foa/src/: async_borrow_fn.rs  context.rs  core_error.rs  foa_error.rs  hash.rs  lib.rs  no_debug.rs  ref_into_make.rs  refinto.rs  static_state.rs  string.rs  string_utils.rs  trait_utils.rs  wrapper.rs  wrapper_discr.rs
foa/src/appcfg/: app_cfg.rs
foa/src/db/: mod.rs  sqlx.rs  sqlx_old.rs
foa/src/db/sqlx/: pg.rs
foa/src/error/: app_error.rs  basic_kind.rs  box_error.rs  core_error.rs  deser.rs  errors.rs  foa_error.rs  full_kind.rs  maybe_error.rs  misc.rs  mod.rs  payload.rs  prereq.rs  props_kind.rs  serde.rs  static_str.rs  tags.rs  trivial.rs  typed_kind.rs  utils.rs
foa/src/fun/: async_borrow_fn.rs  async_fn.rs  async_rfn.rs  mod.rs
foa/src/sync/: thread_map.rs
foa/src/tokio/: mod.rs  task_local.rs  task_local_ext.rs  task_local_old.rs
foa/src/validation/: mod.rs  validc.rs
foa/src/web/: mapped_errors.rs  mod.rs
foa/src/web/axum/: axum_handler.rs  context.rs  handlers.rs  json_handlers.rs  json_handlers_experiment.rs  json_handlers_old.rs  mod.rs
src/: app_error.rs  box_error.rs  context.rs  core_error.rs  foa_error.rs  lib.rs  ser_error.rs  string_utils.rs
