[package]
name = "dev_support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6"
axum = "0.7"
derive_more = { version = "1", features = ["display", "error"] }
foa = { path = "../foa" }
futures = "0.3"
latency_trace = { version = "0.5", features = ["tokio"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
