[package]
name = "dev_support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6"
axum = "0.7"
derive_more = { version = "1", features = ["display", "error"] }
foa = { path = "../foa" }
futures = "0.3"
latency_trace = { version = "0.5", features = ["tokio"] }
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
