[package]
name = "foa"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Types and functions to support a function-oriented architecture style for Rust applications."
repository = "https://github.com/pvillela/rs-foa/tree/main"
readme = "README.md"
keywords = ["function-oriented", "architecture", "framework", "utilities"]
categories = ["rust-patterns", "web-programming"]
exclude = ["CHANGELOG.md", "*.sh", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# log = "0.4"
thiserror = "1"
# anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]

[dev-dependencies]
# env_logger = "0.11"
# once_cell = "1"
# regex = "1"

# [[bench]]
# name = "xxx"
# harness = false

# [package.metadata.docs.rs]
# all-features = true
