[package]
name = "foa"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Types and functions to support a function-oriented architecture style for Rust applications."
repository = "https://github.com/pvillela/rs-foa/tree/main"
readme = "README.md"
keywords = ["function-oriented", "architecture", "framework", "utilities"]
categories = ["rust-patterns", "web-programming"]
exclude = ["CHANGELOG.md", "*.sh", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6"
axum = "0.7"
base64ct = { version = "1", features = ["alloc"] }
futures = "0.3"
log = "0.4"
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0", features = ["postgres", "runtime-tokio-native-tls"] }
thiserror = "1.0"
# anyhow = "1"
tokio = { version = "1.40", features = ["full"] }
valid = { version = "0.3", features = ["serde1"] }

[features]

[dev-dependencies]
# env_logger = "0.11"
# once_cell = "1"
# regex = "1"

# [[bench]]
# name = "xxx"
# harness = false

# [package.metadata.docs.rs]
# all-features = true
